--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,14 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --color-primary: #d76032;
+  --color-primary-dark: #b04e29;
+  --color-primary-bright: #e2733f;
+  --color-secondary: #f58e54;
+  --color-accent: #009656;
+  --color-accent-dark: #007a48;
+  --color-white: #fffbfb;
+  --color-black: #232521;
 }
 
 @theme inline {
@@ -20,7 +26,19 @@
 }
 
 body {
-  background: var(--background);
+  background: var(--color-white);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@keyframes fabIn {
+  from {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
