--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,23 @@
 @import "tailwindcss";
 
 :root {
-  --color-primary: #d76032;
+  --color-primary: #f06f3c;
   --color-primary-dark: #b04e29;
   --color-primary-bright: #e2733f;
   --color-secondary: #f58e54;
   --color-accent: #009656;
   --color-accent-dark: #007a48;
   --color-white: #fffbfb;
+  --color-light: #e2e2e2;
   --color-black: #232521;
+  --color-dark: #0b0b0b;
+  --font-sans: "Geist", "Geist Fallback", system-ui, sans-serif;
+  --font-serif: "Playfair Display", serif;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -25,10 +27,12 @@
   }
 }
 
+
+
 body {
   background: var(--color-white);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-sans)
 }
 
 @keyframes fabIn {
